fix(test): fix warnings in code and tests