@@ -13,6 +13,7 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -46,7 +47,7 @@ class AddRestaurantTest {
                 DishType.PIZZA,       // dishType (use appropriate enum value)
                 4.5,                  // averageRating
                 "http://example.com/photo.jpg", // photoUrl
-                Arrays.asList(new Review("1", "author1", "content1", false)), // userReviews
+                List.of(new Review("1", "author1", "content1", false)), // userReviews
                 new Review("1", "author1", "content1", true)            // summarizedReview
         );
 
@@ -69,7 +70,7 @@ class AddRestaurantTest {
                 DishType.PIZZA,       // dishType (use appropriate enum value)
                 4.5,                  // averageRating
                 "http://example.com/photo.jpg", // photoUrl
-                Arrays.asList(new Review("1", "author1", "content1", false)), // userReviews
+                List.of(new Review("1", "author1", "content1", false)), // userReviews
                 new Review("1", "author1", "content1", true)            // summarizedReview
         );
 
